# ytrag

./: README.md  main.py  pyproject.toml
data/text_files/: python_intro.txt
data/vector_store/: chroma.sqlite3
notepad/: document.ipynb  pdf_loader.ipynb
notepad/.ipynb_checkpoints/: pdf_loader-checkpoint.ipynb
